--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -1,5 +1,6 @@
 .nav {
     display: flex;
+    background-color: white;
 
     .nav__logo {
         font-weight: bold;
@@ -14,7 +15,7 @@
 
         .nav__link {
             font-weight: bold;
-            transition: color .5s ease-in-out;
+            transition: color .25s ease-in-out;
 
             &:hover {
                 cursor: pointer;
