--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -1,76 +1,272 @@
 html,
 body {
-    font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
-
-
-.section {
-    width: 100%;
-    height: 100vh;
-}
 
 
 .turn {
-    position: fixed;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    background-color: #1a1a1a;
-    z-index: 1200;
-    display: none;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: #1a1a1a;
+  z-index: 1200;
+  display: none;
 
-    span {
-        font-size: 1.5em;
-        position: relative;
-        float: left;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        color: white;
-        text-transform: uppercase;
-    }
+  span {
+    font-size: 1.5em;
+    position: relative;
+    float: left;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    text-transform: uppercase;
+  }
+}
+
+.button {
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #ffffff;
+  font-size: 14px;
+  line-height: 1.55;
+  font-weight: 600;
+  letter-spacing: 1px;
+  border-width: 0px;
+  border-radius: 5px;
+  background-color: #6c63ff;
+  background-position: center center;
+  border-color: transparent;
+  border-style: solid;
+  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out,
+    border-color 0.2s ease-in-out;
+  box-shadow: 0px 10px 30px 0px rgba(108, 99, 255, 0.3);
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.intro__image {
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
 }
 
 
 @media screen and (max-width: 1023px) and (orientation: landscape) {
-    .turn {
-        display: block;
-    }
+  .turn {
+    display: block;
+  }
 }
 
 // mobile
 @media (max-width: 599px) {
-    #intro {
-        margin-top: 2em;
-    }
+  h1 {
+    font-size: 39px;
+    line-height: 47px;
+    text-align: center;
+  }
+
+  p {
+    font-size: 18px;
+    line-height: 28px;
+    text-align: center;
+  }
+
+  section {
+    width: 80%;
+    margin-left: 10%;
+  }
+
+  .intro {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    margin-left: 10%;
+    margin-top: 2em;
+    height: auto;
+  }
+
+
+  .button {
+    margin-top: 1em;
+    width: 100%;
+    height: 50px;
+  }
+
+  .intro__text {
+    width: 100%;
+  }
+
+  .intro__image {
+    height: 40vh;
+  }
 }
 
 // tublet-portrait
 @media (min-width: 600px) {
-    #intro {
-        margin-top: 50px;
-    }
+  h1 {
+    font-size: 50px;
+    line-height: 60px;
+  }
+
+  p {
+    font-size: 21px;
+    line-height: 33px;
+  }
+
+  section {
+    width: 80%;
+    margin-left: 10%;
+  }
+
+  .intro {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    margin-left: 10%;
+    margin-top: 2em;
+    height: auto;
+    text-align: left;
+  }
+
+
+  .button {
+    margin-top: 1.4em;
+    width: 100%;
+    height: 75px;
+    font-size: 21px;
+  }
+
+  .intro__text {
+    width: 100%;
+  }
+
+  .intro__image {
+    margin-top: 1.4em;
+    height: 40vh;
+  }
 }
 
 // tablet-landscape
 @media (min-width: 900px) {
-    #intro {
-        margin-top: 50px;
-    }
+  h1 {
+    font-size: 50px;
+    line-height: 60px;
+  }
+
+  p {
+    font-size: 21px;
+    line-height: 33px;
+  }
+
+  .intro {
+    display: flex;
+    flex-direction: row;
+    width: 90%;
+    margin-left: 5%;
+    margin-top: 2em;
+    height: auto;
+    text-align: left;
+  }
+
+
+  .button {
+    margin-right: 1.4em;
+    width: 45%;
+    height: 50px;
+    font-size: 15px;
+  }
+
+  .intro__text {
+    width: 40%;
+  }
+
+  .intro__buttons {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .intro__image {
+    height: 75vh;
+    width: 50%;
+  }
 }
+
 
 // desktop/laptop
 @media (min-width: 1200px) {
-    #intro {
-        margin-top: 50px;
-    }
+  .intro {
+    display: flex;
+    flex-direction: row;
+    width: 90%;
+    margin-left: 5%;
+    margin-top: 5em;
+    height: auto;
+    text-align: left;
+  }
+
+
+  .button {
+    margin-right: 1.4em;
+    width: 45%;
+    height: 75px;
+    font-size: 18px;
+  }
+
+  .intro__text {
+    width: 50%;
+  }
+
+  .intro__buttons {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .intro__image {
+    height: 50vh;
+    width: 45%;
+  }
 }
 
 // desktop x-large
 @media (min-width: 1800px) {
-    #intro {
-        margin-top: 60px;
-    }
+
+  .intro {
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    margin-left: 20%;
+    margin-top: 10em;
+    height: auto;
+    text-align: left;
+  }
+
+
+  .button {
+    margin-top: 1em;
+    margin-right: 1.4em;
+    width: 45%;
+    height: 65px;
+    font-size: 18px;
+  }
+
+  .intro__text {
+    width: 40%;
+  }
+
+  .intro__buttons {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .intro__image {
+    height: 50vh;
+    width: 45%;
+  }
 }
