--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -1,25 +1,30 @@
 .nav {
-    display: flex;
+    width: 100%;
+
     background-color: white;
 
-    .nav__logo {
-        font-weight: bold;
-
-        &:hover {
-            cursor: pointer;
-        }
-    }
-
-    .nav__links {
+    .nav__wrapper {
         display: flex;
 
-        .nav__link {
+        .nav__logo {
             font-weight: bold;
-            transition: color .25s ease-in-out;
 
             &:hover {
                 cursor: pointer;
-                color: blue;
+            }
+        }
+
+        .nav__links {
+            display: flex;
+
+            .nav__link {
+                font-weight: bold;
+                transition: color .25s ease-in-out;
+
+                &:hover {
+                    cursor: pointer;
+                    color: blue;
+                }
             }
         }
     }
@@ -29,45 +34,51 @@
 @media (max-width: 599px) {
     .nav {
         position: relative;
-        width: 100%;
-        height: 50vh;
-        flex-direction: column;
-        align-items: center;
 
-        .nav__logo {
-            height: 20%;
-            margin-top: 50px;
-        }
+        .nav__wrapper {
 
-        .nav__links {
+            width: 100%;
+            height: 50vh;
             flex-direction: column;
-            text-align: center;
-            height: 80%;
-            justify-content: space-between;
+            align-items: center;
+
+            .nav__logo {
+                height: 20%;
+                margin-top: 50px;
+            }
+
+            .nav__links {
+                flex-direction: column;
+                text-align: center;
+                height: 80%;
+                justify-content: space-between;
+            }
         }
     }
-
 }
 
 // tublet-portrait
 @media (min-width: 600px) {
     .nav {
         position: relative;
-        width: 100%;
-        height: 40vh;
-        flex-direction: column;
-        align-items: center;
 
-        .nav__logo {
-            height: 20%;
-            margin-top: 50px;
-        }
-
-        .nav__links {
+        .nav__wrapper {
+            width: 100%;
+            height: 40vh;
             flex-direction: column;
-            text-align: center;
-            height: 80%;
-            justify-content: space-between;
+            align-items: center;
+
+            .nav__logo {
+                height: 20%;
+                margin-top: 50px;
+            }
+
+            .nav__links {
+                flex-direction: column;
+                text-align: center;
+                height: 80%;
+                justify-content: space-between;
+            }
         }
     }
 }
@@ -78,25 +89,30 @@
         position: fixed;
         top: 0;
         left: 0;
-        width: 90%;
-        margin: auto 5%;
-        height: 50px;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
 
-        .nav__logo {
-            width: 20%;
-            height: auto !important;
-            margin-top: 0;
-        }
+        .nav__wrapper {
 
-        .nav__links {
-            width: 70%;
+
+            width: 90%;
+            margin: auto 5%;
+            height: 50px;
             flex-direction: row;
             align-items: center;
-            text-align: center;
+            justify-content: space-between;
 
+            .nav__logo {
+                width: 20%;
+                height: auto !important;
+                margin-top: 0;
+            }
+
+            .nav__links {
+                width: 70%;
+                flex-direction: row;
+                align-items: center;
+                text-align: center;
+
+            }
         }
     }
 }
@@ -104,12 +120,16 @@
 // desktop/laptop
 @media (min-width: 1200px) {
     .nav {
-        width: 80%;
-        margin: auto 10%;
-        height: 60px;
+        .nav__wrapper {
 
-        .nav__links {
-            width: 70%;
+
+            width: 80%;
+            margin: auto 10%;
+            height: 60px;
+
+            .nav__links {
+                width: 70%;
+            }
         }
     }
 }
@@ -117,12 +137,14 @@
 // desktop x-large
 @media (min-width: 1800px) {
     .nav {
-        width: 60%;
-        margin: auto 20%;
-        height: 60px;
+        .nav__wrapper {
+            width: 60%;
+            margin: auto 20%;
+            height: 60px;
 
-        .nav__links {
-            width: 70%;
+            .nav__links {
+                width: 70%;
+            }
         }
     }
 }
