--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -1,6 +1,6 @@
 .nav {
     width: 100%;
-
+    z-index: 100;
     background-color: white;
 
     .nav__wrapper {
@@ -30,6 +30,38 @@
     }
 }
 
+@media screen and (max-width: 1023px) and (orientation: landscape) {
+    .nav {
+        position: relative;
+        height: 100vh;
+
+        .nav__wrapper {
+
+            width: 100%;
+            height: 100%;
+            flex-direction: column;
+            align-items: center;
+
+            .nav__logo {
+                height: 20%;
+                margin-top: 50px;
+            }
+
+            .nav__links {
+                flex-direction: column;
+                text-align: center;
+                height: 80vh;
+                justify-content: space-between;
+
+                * {
+                    font-size: 1.5em;
+                    margin-top: 0.8em;
+                }
+            }
+        }
+    }
+}
+
 // mobile
 @media (max-width: 599px) {
     .nav {
@@ -50,9 +82,13 @@
             .nav__links {
                 flex-direction: column;
                 text-align: center;
-                height: 80%;
+                height: 60vh;
                 justify-content: space-between;
+
+
             }
+
+
         }
     }
 }
