--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -7,6 +7,15 @@
     background-size: 100% 100%;
 }
 
+
+
+.examples {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .attention {
     width: 100%;
     background-color: #f2f2f2;
@@ -36,11 +45,31 @@
     flex-direction: column;
 }
 
-@media screen and (max-width: 1023px) and (orientation: landscape) {}
+@media screen and (max-width: 1023px) and (orientation: landscape) {
+    section {
+        margin-top: 2em;
+    }
+
+    .request {
+        padding-top: 5em;
+        height: auto;
+
+        h2 {
+            text-align: center;
+        }
+    }
+
+    .intro__image,
+    .audio__image,
+    .video__image,
+    .stages__image,
+    .prices__image {
+        display: none;
+    }
+}
 
 // mobile
 @media (max-width: 599px) {
-
     section {
         width: 90%;
         margin-left: 5%;
@@ -104,7 +133,6 @@
 
 // tublet-portrait
 @media (min-width: 600px) {
-
     section {
         width: 80%;
         margin-left: 10%;
@@ -167,7 +195,8 @@
     }
 
     .stages,
-    .prices {
+    .prices,
+    .request {
         margin-top: 5em;
     }
 
@@ -180,8 +209,6 @@
 
 // tablet-landscape
 @media (min-width: 900px) {
-
-
     .intro {
         display: flex;
         flex-direction: column-reverse;
@@ -240,7 +267,8 @@
     .audio__advantages,
     .video__advantages,
     .stages,
-    .prices {
+    .prices,
+    .request {
         width: 90%;
         margin-left: 5%;
     }
@@ -281,7 +309,7 @@
     }
 
     .audio,
-    .video {
+    .videot {
         margin-top: 10em;
         display: flex;
         flex-direction: row;
@@ -306,7 +334,8 @@
     .audio__advantages,
     .video__advantages,
     .stages,
-    .prices {
+    .prices,
+    .request {
         width: 80%;
         margin-left: 10%;
         margin-top: 7.5em;
@@ -360,7 +389,6 @@
     .video__text {
         width: 40%;
         height: auto;
-        margin-left: 10%;
         align-self: center;
     }
 
@@ -373,7 +401,8 @@
     .audio__advantages,
     .video__advantages,
     .stages,
-    .prices {
+    .prices,
+    .request {
         width: 60%;
         margin-left: 20%;
         margin-top: 7.5em;
@@ -394,5 +423,14 @@
         .button {
             width: 250px;
         }
+    }
+
+    .examples {
+        width: 60%;
+        margin-left: 20%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
 }
