Move nav logo to separate component

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -309,7 +309,7 @@
     }
 
     .audio,
-    .videot {
+    .video {
         margin-top: 10em;
         display: flex;
         flex-direction: row;
