--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -1,3 +1,22 @@
+.contacts {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    .contacts__navigation {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .contacts__logo {
+        font-weight: bold;
+
+        &:hover {
+            cursor: pointer;
+        }
+    }
+}
+
 .intro__image,
 .audio__image,
 .video__image,
@@ -6,8 +25,6 @@
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
-
-
 
 .examples {
     display: flex;
@@ -286,7 +303,6 @@
         text-align: left;
     }
 
-
     .button {
         margin-right: 1.4em;
         width: 45%;
@@ -432,5 +448,63 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+    }
+
+    .contacts {
+        width: 60%;
+        margin-left: 20%;
+        height: 80vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        .contacts__navigation {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 100%;
+            height: 100px;
+
+            .contacts__logo {
+                width: auto;
+            }
+
+            .contacts__links {
+                display: flex;
+                width: 40%;
+                justify-content: space-between;
+                font-size: 0.9em;
+
+                &:hover {
+                    cursor: pointer;
+                }
+            }
+        }
+
+        .contacts__phone-email {
+            display: flex;
+            flex-direction: column;
+            width: 50%;
+            height: auto;
+            justify-content: space-around;
+
+            .contacts__phone {
+                margin-bottom: 1em;
+            }
+
+            .contacts__phone a {
+                font-weight: 900;
+                color: black;
+                font-size: 2em;
+                text-decoration: none;
+
+            }
+
+            .contacts__email a {
+                text-decoration: none;
+                color: black;
+                font-size: 1.25em;
+            }
+        }
     }
 }
