Change typography settings

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -14,6 +14,15 @@ video:focus {
   -moz-outline-style: none;
 }
 
+h1,
+h2 {
+  font-weight: 900;
+}
+
+b {
+  font-weight: 700;
+}
+
 ul {
   list-style: none;
   margin-left: 0;
@@ -73,7 +82,8 @@ li:before {
   }
 }
 
-@media screen and (max-width: 1023px) and (orientation: landscape) {}
+@media screen and (max-width: 1023px) and (orientation: landscape) {
+}
 
 // mobile
 @media (max-width: 599px) {
@@ -169,7 +179,6 @@ li:before {
 
 // desktop/laptop
 @media (min-width: 1200px) {
-
   h1,
   h2 {
     text-align: left;
