--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -1,153 +1,167 @@
-.nav {
-    width: 100%;
-    z-index: 100;
-    background-color: white;
+.navbar,
+.navbar--hidden {
+  width: 100%;
+  transition: top 0.5s;
+  z-index: 100;
+  background-color: white;
 
-    .nav__wrapper {
-        display: flex;
+  .navbar__wrapper {
+    display: flex;
 
-        .nav__links {
-            display: flex;
+    .navbar__links {
+      display: flex;
 
-            .nav__link {
-                font-weight: 700;
-                transition: color .25s ease-in-out;
+      .navbar__link {
+        font-weight: 700;
+        transition: color 0.25s ease-in-out;
 
-                &:hover {
-                    cursor: pointer;
-                    color: #231d9b;
-                }
-            }
+        &:hover {
+          cursor: pointer;
+          color: #231d9b;
         }
+      }
     }
+  }
 }
 
+.navbar {
+  top: 0;
+}
+
+
 @media screen and (max-width: 1023px) and (orientation: landscape) {
-    .nav {
-        position: relative;
-        height: 100vh;
 
-        .nav__wrapper {
+  .navbar,
+  .navbar--hidden {
+    position: relative;
+    height: 100vh;
 
-            width: 100%;
-            height: 100%;
-            flex-direction: column;
-            align-items: center;
+    .navbar__wrapper {
+      width: 100%;
+      height: 100%;
+      flex-direction: column;
+      align-items: center;
 
-            .nav__links {
-                flex-direction: column;
-                text-align: center;
-                height: 80vh;
-                justify-content: space-between;
+      .navbar__links {
+        flex-direction: column;
+        text-align: center;
+        height: 80vh;
+        justify-content: space-between;
 
-                * {
-                    font-size: 1.5em;
-                    margin-top: 0.8em;
-                }
-            }
+        * {
+          font-size: 1.5em;
+          margin-top: 0.8em;
         }
+      }
     }
+  }
 }
 
 // mobile
 @media (max-width: 599px) {
-    .nav {
-        position: relative;
 
-        .nav__wrapper {
+  .navbar,
+  .navbar--hidden {
+    position: relative;
 
-            width: 100%;
-            height: 50vh;
-            flex-direction: column;
-            align-items: center;
+    .navbar__wrapper {
+      width: 100%;
+      height: 50vh;
+      flex-direction: column;
+      align-items: center;
 
-            .nav__links {
-                flex-direction: column;
-                text-align: center;
-                height: 60vh;
-                justify-content: space-between;
-
-
-            }
-
-
-        }
+      .navbar__links {
+        flex-direction: column;
+        text-align: center;
+        height: 60vh;
+        justify-content: space-between;
+      }
     }
+  }
 }
 
 // tublet-portrait
 @media (min-width: 600px) {
-    .nav {
-        position: relative;
 
-        .nav__wrapper {
-            width: 100%;
-            height: 40vh;
-            flex-direction: column;
-            align-items: center;
+  .navbar,
+  .navbar--hidden {
+    position: relative;
 
-            .nav__links {
-                flex-direction: column;
-                text-align: center;
-                height: 80%;
-                justify-content: space-between;
-            }
-        }
+    .navbar__wrapper {
+      width: 100%;
+      height: 40vh;
+      flex-direction: column;
+      align-items: center;
+
+      .navbar__links {
+        flex-direction: column;
+        text-align: center;
+        height: 80%;
+        justify-content: space-between;
+      }
     }
+  }
 }
 
 // tablet-landscape
 @media (min-width: 900px) {
-    .nav {
-        position: fixed;
-        top: 0;
-        left: 0;
 
-        .nav__wrapper {
-            width: 90%;
-            margin: auto 5%;
-            height: 50px;
-            flex-direction: row;
-            align-items: center;
-            justify-content: space-between;
+  .navbar,
+  .navbar--hidden {
+    .navbar__wrapper {
+      width: 90%;
+      margin: auto 5%;
+      height: 50px;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
 
-            .nav__links {
-                width: 70%;
-                flex-direction: row;
-                align-items: center;
-                text-align: center;
-
-            }
-        }
+      .navbar__links {
+        width: 70%;
+        flex-direction: row;
+        align-items: center;
+        text-align: center;
+      }
     }
+  }
 }
 
 // desktop/laptop
 @media (min-width: 1200px) {
-    .nav {
-        .nav__wrapper {
-            width: 80%;
-            margin: auto 10%;
-            height: 60px;
 
-            .nav__links {
-                width: 70%;
-            }
-        }
+  .navbar--hidden {
+    top: -100px;
+  }
+
+  .navbar,
+  .navbar--hidden {
+    .navbar__wrapper {
+      width: 80%;
+      margin: auto 10%;
+      height: 60px;
+
+      .navbar__links {
+        width: 70%;
+      }
     }
+  }
 }
 
 // desktop x-large
 @media (min-width: 1800px) {
-    .nav {
-        .nav__wrapper {
-            width: 60%;
-            margin: auto 20%;
-            height: 60px;
 
-            .nav__links {
-                width: 70%;
-            }
-        }
+  .navbar,
+  .navbar--hidden {
+    position: fixed;
+
+    .navbar__wrapper {
+      width: 60%;
+      margin: auto 20%;
+      height: 60px;
+
+      .navbar__links {
+        width: 70%;
+      }
     }
+  }
 }
