--- a/src/pages/sections/Contacts/Contacts.scss
+++ b/src/pages/sections/Contacts/Contacts.scss
@@ -1,326 +1,329 @@
 .contacts {
+    background-color: #B4DBFE;
+    width: 100%;
+    margin: 0;
+}
+
+.contacts__wrapper {
+    height: 100%;
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
-
-    .contacts__navigation {
-        display: flex;
-        justify-content: space-between;
-    }
-
-    .contacts__logo {
-        font-weight: bold;
-
-        &:hover {
-            cursor: pointer;
-        }
-    }
 }
 
-.request-form * {
+.contacts__form {
     display: flex;
     flex-direction: column;
-    border: none;
-
-    input,
-    textarea {
-        padding: 10px 20px;
-        margin: 0;
-        border: 1px solid black;
-    }
-
-    input:active,
-    input:focus,
-    textarea:active,
-    textarea:focus {
-        outline: 0;
-        border: 1px solid black;
-        -moz-outline-style: none;
-    }
-}
-
-.request__image {
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-}
-
-@media screen and (max-width: 1023px) and (orientation: landscape) {
-    .request__image {
-        display: none;
-    }
-
-    .request-form {
-        .button {
-            width: 100% !important;
-        }
-    }
-}
 
 
-
-
-// mobile
-@media (max-width: 599px) {
-    .request-inner {
-        width: 100%;
+    form fieldset {
         display: flex;
-        flex-direction: column-reverse;
-        height: 80vh;
-        justify-content: space-between;
-    }
-
-    .request-form {
-        width: 100%;
-        height: auto;
-
-        .button {
-            width: 94%;
-            margin-left: 3%;
-            height: 65px;
-        }
+        flex-direction: column;
+        border: none;
+        margin: 0;
+        padding: 0;
 
         input,
         textarea {
-            margin-bottom: 1em;
-            width: 100%;
-            margin-left: 0;
-            padding: 0;
-
-            &::placeholder {
-                padding-left: 0em;
-            }
-        }
-
-        input {
-            height: 2em;
-        }
-
-        textarea {
-            &::placeholder {
-                padding-top: 0.25em;
-            }
+            outline: 0;
+            resize: none;
         }
     }
+}
 
-    .request__image {
+.contacts__info {
+    display: flex;
+    flex-direction: column;
+
+    .contacts__phone a,
+    .contacts__email a {
+        text-decoration: none;
+        color: black;
+    }
+
+    .contacts__phone a {
+        font-weight: 900;
+    }
+
+    .contacts__email a {
+        font-weight: 700;
+    }
+
+    .contacts__social {
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+@media screen and (max-width: 1023px) and (orientation: landscape) {}
+
+// mobile
+@media (max-width: 599px) {
+    .contacts {
+        height: auto;
+    }
+
+    .contacts__wrapper {
+        width: 90%;
+        margin-left: 5%;
+        flex-direction: column;
+    }
+
+    .contacts__form {
+        margin-top: 2em;
         width: 100%;
-        height: 40vh;
+
+        form fieldset {
+
+            input,
+            textarea {
+                width: 87.5%;
+                padding: 10px 20px;
+                margin-top: 0.5em;
+            }
+        }
     }
 
+    .contacts__info {
+        margin-top: 5em;
+        height: auto;
+        width: 100%;
+        align-items: flex-end;
+
+        h2 {
+            text-align: right;
+        }
+
+        .contacts__phone a,
+        .contacts__email a {
+            line-height: 1.8em;
+        }
+
+        .contacts__phone a {
+            font-size: 1.75em;
+        }
+
+        .contacts__email a {
+            font-size: 1.5em;
+        }
+
+        .contacts__social {
+            margin-top: 2em;
+            width: 50%;
+        }
+    }
 }
 
 // tublet-portrait
 @media (min-width: 600px) {
-    .request-inner {
-        width: 100%;
-        display: flex;
-        flex-direction: column-reverse;
-        height: 80vh;
-        justify-content: space-between;
-    }
-
-    .request-form {
-        width: 100%;
+    .contacts {
         height: auto;
-
-        .button {
-            width: 94%;
-            margin-left: 3%;
-            height: 65px;
-        }
-
-        input,
-        textarea {
-            margin-bottom: 1em;
-            width: 100%;
-            margin-left: 0;
-
-            &::placeholder {
-                padding-left: 0em;
-            }
-        }
-
-        input {
-            height: 2em;
-        }
-
-        textarea {
-            &::placeholder {
-                padding-top: 0.25em;
-            }
-        }
     }
 
-    .request__image {
+    .contacts__wrapper {
+        width: 90%;
+        margin-left: 5%;
+        flex-direction: column;
+    }
+
+    .contacts__form {
+        margin-top: 5em;
         width: 100%;
-        height: 40vh;
+
+        form fieldset {
+
+            input,
+            textarea {
+                width: 90%;
+                padding: 10px 20px;
+                margin-top: 0.5em;
+            }
+        }
     }
 
+    .contacts__info {
+        margin-top: 5em;
+        height: auto;
+        width: 100%;
+        align-items: flex-end;
+
+        h2 {
+            text-align: right;
+        }
+
+        .contacts__phone a,
+        .contacts__email a {
+            line-height: 1.8em;
+        }
+
+        .contacts__phone a {
+            font-size: 1.75em;
+        }
+
+        .contacts__email a {
+            font-size: 1.5em;
+        }
+
+        .contacts__social {
+            margin-top: 2em;
+            width: 36%;
+        }
+    }
 }
 
 // tablet-landscape
 @media (min-width: 900px) {
-    .request-inner {
-        width: 100%;
-        display: flex;
-        flex-direction: column-reverse;
-        height: 80vh;
-        justify-content: space-between;
+    .contacts {
+        height: 85vh;
     }
 
-    .request-form {
-        width: 60%;
-        margin-left: 20%;
-        height: auto;
+    .contacts__wrapper {
+        width: 90%;
+        margin-left: 5%;
+        flex-direction: row-reverse;
+    }
 
-        .button {
-            width: 60%;
-            margin-left: 20%;
-            height: 65px;
-        }
+    .contacts__form {
+        margin-top: 5em;
+        width: 45%;
 
-        input,
-        textarea {
-            margin-bottom: 1em;
-            width: 100%;
-            margin-left: 0;
-        }
+        form fieldset {
 
-        input {
-            height: 2em;
+            input,
+            textarea {
+                width: 90%;
+                padding: 10px 20px;
+                margin-top: 0.5em;
+            }
         }
     }
 
-    .request__image {
-        width: 100%;
-        height: 50vh;
+    .contacts__info {
+        margin-top: 5em;
+        height: 65%;
+        width: 45%;
+
+        h2 {
+            text-align: left;
+        }
+
+        .contacts__phone a,
+        .contacts__email a {
+            line-height: 1.8em;
+        }
+
+        .contacts__phone a {
+            font-size: 1.75em;
+        }
+
+        .contacts__email a {
+            font-size: 1.5em;
+        }
+
+        .contacts__social {
+            margin-top: 2em;
+            width: 36%;
+        }
     }
 }
 
 // desktop/laptop
 @media (min-width: 1200px) {
-    .request-inner {
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        height: 80vh;
-        justify-content: space-between;
+    .contacts {
+        height: 75vh;
     }
 
-    .request-form {
-        width: 50%;
-        margin-left: 0;
+    .contacts__wrapper {
+        width: 80%;
+        margin-left: 10%;
+    }
 
-        height: 100%;
+    .contacts__form {
+        margin-top: 5em;
+        width: 45%;
 
-        .button {
-            width: 103%;
-            height: 65px;
-            margin-left: 2.5%;
-        }
+        form fieldset {
 
-        input,
-        textarea {
-            margin-bottom: 1em;
-            width: 100%;
-        }
-
-        input {
-            height: 2em;
+            input,
+            textarea {
+                width: 80%;
+                padding: 10px 20px;
+                margin-top: 0.5em;
+            }
         }
     }
 
-    .request__image {
-        width: 50%;
-        height: 40vh;
-    }
+    .contacts__info {
+        margin-top: 5em;
+        height: 65%;
+        width: 45%;
 
+        .contacts__phone a,
+        .contacts__email a {
+            line-height: 1.8em;
+        }
+
+        .contacts__phone a {
+            font-size: 1.75em;
+        }
+
+        .contacts__email a {
+            font-size: 1.5em;
+        }
+
+        .contacts__social {
+            margin-top: 2em;
+            width: 36%;
+        }
+    }
 }
 
 // desktop x-large
 @media (min-width: 1800px) {
-    .request-inner {
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        height: 80vh;
-        justify-content: space-between;
-    }
-
-    .request-form {
-        width: 40%;
-        height: 100%;
-
-        input,
-        textarea {
-            margin-bottom: 1em;
-            width: 100%;
-        }
-
-        input {
-            height: 2em;
-        }
-    }
-
-    .request__image {
-        width: 50%;
-        height: 40vh;
-    }
-
     .contacts {
+        height: 75vh;
+    }
+
+    .contacts__wrapper {
         width: 60%;
         margin-left: 20%;
-        height: 80vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
+    }
 
-        .contacts__navigation {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            width: 100%;
-            height: 100px;
+    .contacts__form {
+        margin-top: 5em;
+        width: 45%;
 
-            .contacts__logo {
-                width: auto;
-            }
+        form fieldset {
 
-            .contacts__links {
-                display: flex;
-                width: 40%;
-                justify-content: space-between;
-                font-size: 0.9em;
-
-                &:hover {
-                    cursor: pointer;
-                }
+            input,
+            textarea {
+                width: 80%;
+                padding: 10px 20px;
+                margin-top: 0.5em;
             }
         }
+    }
 
-        .contacts__phone-email {
-            display: flex;
-            flex-direction: column;
-            width: 50%;
-            height: auto;
-            justify-content: space-around;
+    .contacts__info {
+        margin-top: 5em;
+        height: 65%;
+        width: 45%;
 
-            .contacts__phone {
-                margin-bottom: 1em;
-            }
+        .contacts__phone a,
+        .contacts__email a {
+            line-height: 1.8em;
+        }
 
-            .contacts__phone a {
-                font-weight: 900;
-                color: black;
-                font-size: 2em;
-                text-decoration: none;
-            }
+        .contacts__phone a {
+            font-size: 1.75em;
+        }
 
-            .contacts__email a {
-                text-decoration: none;
-                color: black;
-                font-size: 1.25em;
-            }
+        .contacts__email a {
+            font-size: 1.5em;
+        }
+
+        .contacts__social {
+            margin-top: 2em;
+            width: 36%;
         }
     }
 }
