--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -1,26 +1,10 @@
-@media screen and (max-width: 1023px) and (orientation: landscape) {
-  section {
-    margin-top: 2em;
-  }
-}
+@media screen and (max-width: 1023px) and (orientation: landscape) {}
 
 // mobile
-@media (max-width: 599px) {
-  section {
-    width: 90%;
-    margin-left: 5%;
-  }
-
-}
+@media (max-width: 599px) {}
 
 // tublet-portrait
-@media (min-width: 600px) {
-  section {
-    width: 80%;
-    margin-left: 10%;
-  }
-
-}
+@media (min-width: 600px) {}
 
 // tablet-landscape
 @media (min-width: 900px) {}
