--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -16,7 +16,7 @@
 
         &:hover {
           cursor: pointer;
-          color: #231d9b;
+          color: rgb(46, 162, 175);
         }
       }
     }
