--- a/src/pages/sections/Attention/Attention.scss
+++ b/src/pages/sections/Attention/Attention.scss
@@ -50,10 +50,41 @@
 }
 
 // tablet-landscape
-@media (min-width: 900px) {}
+@media (min-width: 900px) {
+  .attention {
+    p {
+      width: 80%;
+    }
+
+    .button {
+      width: 40%;
+    }
+  }
+}
 
 // desktop/laptop
-@media (min-width: 1200px) {}
+@media (min-width: 1200px) {
+  .attention {
+    p {
+      width: 80%;
+    }
+
+    .button {
+      width: 40%;
+    }
+  }
+}
 
 // desktop x-large
-@media (min-width: 1800px) {}
+@media (min-width: 1800px) {
+  .attention {
+    p {
+      width: 60%;
+    }
+
+    .button {
+      width: 380px;
+      height: 75px;
+    }
+  }
+}
