--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -42,51 +42,6 @@ li:before {
   padding-right: 5px;
 }
 
-.button {
-  height: 7.5rem;
-  padding-left: 6rem;
-  padding-right: 6rem;
-  background-color: black;
-  border-color: black;
-  border-radius: 4rem;
-  box-shadow: 0 40px 50px 0 rgba(0, 0, 0, .1);
-  color: white;
-  font-size: 2rem;
-  text-align: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-weight: 600;
-  letter-spacing: 1px;
-  background-position: center center;
-  border-color: transparent;
-  border-style: solid;
-  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out,
-    border-color 0.2s ease-in-out;
-
-  &:hover {
-    cursor: pointer;
-  }
-}
-
-.button.blue {
-  background-color: rgb(46, 162, 175);
-  box-shadow: 0px 10px 30px 0px rgba(228, 228, 230, 0.3);
-
-  &:hover {
-    background-color: rgb(39, 132, 143);
-  }
-}
-
-.button.orange {
-  background-color: rgb(247, 189, 75);
-  box-shadow: 0px 10px 30px 0px rgba(228, 228, 230, 0.3);
-
-  &:hover {
-    background-color: rgb(241, 168, 20);
-  }
-}
-
 @media screen and (max-width: 1023px) and (orientation: landscape) {}
 
 // mobile
@@ -115,12 +70,7 @@ li:before {
     margin-left: 5%;
   }
 
-  .button {
-    margin-top: 1em;
-    width: 100%;
-    height: 50px;
-    font-size: 14px;
-  }
+
 }
 
 // tublet-portrait
@@ -147,12 +97,7 @@ li:before {
     margin-left: 10%;
   }
 
-  .button {
-    margin-top: 1.4em;
-    width: 100%;
-    height: 75px;
-    font-size: 21px;
-  }
+
 }
 
 // tablet-landscape
@@ -174,12 +119,7 @@ li:before {
     line-height: 33px;
   }
 
-  .button {
-    margin-right: 1.4em;
-    width: 200px;
-    height: 50px;
-    font-size: 15px;
-  }
+
 }
 
 // desktop/laptop
@@ -190,21 +130,8 @@ li:before {
     text-align: left;
   }
 
-  .button {
-    margin-right: 1.4em;
-    width: 45%;
-    height: 65px;
-    font-size: 18px;
-  }
+
 }
 
 // desktop x-large
-@media (min-width: 1800px) {
-  .button {
-    margin-top: 1em;
-    margin-right: 1.4em;
-    width: 45%;
-    height: 65px;
-    font-size: 18px;
-  }
-}
+@media (min-width: 1800px) {}
