--- a/src/pages/sections/Prices/Prices.scss
+++ b/src/pages/sections/Prices/Prices.scss
@@ -16,9 +16,21 @@
 }
 
 // tublet-portrait
+@media (max-width: 599px) {
+  .prices {
+    margin-top: 0em;
+  }
+
+  .prices__image {
+    width: 100%;
+    height: 50vh;
+  }
+}
+
+// tublet-portrait
 @media (min-width: 600px) {
   .prices {
-    margin-top: 5em;
+    margin-top: 0em;
   }
 
   .prices__image {
@@ -40,7 +52,7 @@
   .prices {
     width: 80%;
     margin-left: 10%;
-    margin-top: 7.5em;
+    margin-top: 0em;
   }
 }
 
@@ -49,7 +61,7 @@
   .prices {
     width: 60%;
     margin-left: 20%;
-    margin-top: 7.5em;
+    margin-top: 0;
   }
 
   .prices__image {
