--- a/src/pages/sections/Stages/Stages.scss
+++ b/src/pages/sections/Stages/Stages.scss
@@ -16,6 +16,10 @@
 
 // mobile
 @media (max-width: 599px) {
+  .stages {
+    margin-top: 3.5em;
+  }
+
   .stages__image {
     width: 100%;
     height: 50vh;
